[workspace]
members = [
    "packages/*", 
    "contracts/*",
]

resolver = "2"

[workspace.package]
version    = "1.3.0"
edition    = "2021"
repository = "https://github.com/MegaRockLabs/cw-extra"
license    = "MIT"


[workspace.dependencies]
cw-storage-plus         = "1.2.0"
cosmwasm-schema         = "1.5.8"
cosmwasm-std            = { version = "1.5.8", default-features = false, features = [] }
k256                    = { version = "0.13.4", default-features = false, features = ["ecdsa"] }
sha2                    = { version = "0.10.8", default-features = false }

schemars                = "0.8.21"
semver                  = "1.0.20"
thiserror               = "2.0.4"

cw-ownable              = { version = "0.5.1" }
cw-utils                = "1.0.3"
cw1                     = "1.1.2"
cw2                     = "1.1.2"
cw22                    = "1.5.9"
cw721                   = "0.18.0"
sg721                   = "3.15.0"
sg721-base              = "3.15.0"
cw81                    = { path = "packages/cw81", version = "1.3.0" }
cw82                    = { path = "packages/cw82", version = "1.3.0" }
cw83                    = { path = "packages/cw83", version = "1.3.0" }

[profile.release.package.cw81]
codegen-units = 1
incremental = false

[profile.release.package.cw82]
codegen-units = 1
incremental = false

[profile.release.package.cw83]
codegen-units = 1
incremental = false

[profile.release.package.cw82-token-account]
codegen-units = 1
incremental   = false

[profile.release.package.cw83-tba-registry]
codegen-units = 1
incremental = false


[profile.release]
rpath            = false
lto              = true
overflow-checks  = true
opt-level        = 3
debug            = false
debug-assertions = false
