[package]
name       = "e2e"
version    = { workspace = true }
edition    = { workspace = true }
repository = { workspace = true }


[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
cosm-orc       = "3.0.1"
cosm-tome      = "0.1.1"
cosmrs         = { version = "0.10.0", features = ["rpc", "cosmwasm", "grpc", "bip32"] }
#cosm-orc       = "4.0.1"
#cosm-tome      = "0.2.2"
assert_matches = "1.5"
serde_json     = "1.0"
env_logger     = "0.10.0"
test-context   = "0.1.4"
once_cell      = "1.13.0"
serde          = { version = "1.0", default-features = false, features = ["derive"] }
rand           = "0.8"
async-trait    = "0.1.74"
tokio = "1.33.0"

cosmwasm-schema      = { workspace = true }
cosmwasm-std         = { workspace = true }
cw1                  = { workspace = true }
cw2                  = { workspace = true }
cw22                 = { workspace = true }
cw81                 = { workspace = true }
cw82                 = { workspace = true }
cw83                 = { workspace = true }
cw721                = { workspace = true }
cw82-token-account   = { workspace = true }
cw83-tba-registry    = { workspace = true }
sg721                = { workspace = true }
sg721-base           = { workspace = true, features = ["library"] }