[package]
name = "cw23-last-signature"
version = "0.1.0"
authors = [ "Kromsten <s@users.noreply.megarock.labs>" ]
edition = "2021"
description = "Example contract showcasing cw23 that uses a public key in the storage for verification"
repository = "https://github.com/MegaRockLabs/cw-plus-plus"

[dependencies]
cosmwasm-schema = { workspace = true }
cosmwasm-std    = { workspace = true }
cw-storage-plus = { workspace = true }
cw-utils        = { workspace = true }
cw2             = { workspace = true }
cw23            = { workspace = true }