[package]
name = "cw23-sn-ks"
version = "0.1.0"
authors = [ "Kromsten <s@users.noreply.megarock.labs>" ]
edition = "2021"
description = "Example contract showcasing cw23 that uses PK generated inside enclave of Secret Network. This approach isn't secure enough and leaks the secret key if SGX to be broken"
repository = "https://github.com/MegaRockLabs/cw-plus-plus"

[dependencies]
cosmwasm-std    = { git = "https://github.com/scrtlabs/cosmwasm", version = "1.1.11", package = "secret-cosmwasm-std", features = [ "random" ] }
cosmwasm-storage = { git = "https://github.com/scrtlabs/cosmwasm", package = "secret-cosmwasm-storage" }

secret-toolkit  = { version = "0.10.0", default-features = false,  features = ["storage"] }
cosmwasm-schema = { workspace = true }
cw-storage-plus = { workspace = true }
sha2            = { workspace = true }
cw2             = { workspace = true }
cw23            = { workspace = true }
k256            = { workspace = true }
thiserror       = { workspace = true }

rand_chacha = { version = "0.3.1", default-features = false}
semver = "1.0.18"


