[package]
name = "cw81-last-signature"
version = "0.1.0"
authors = [ "Kromsten <s@noreply.megarock.labs>" ]
edition = "2021"
description = "Example contract showcasing cw81 that uses a public key in the storage for verification"
repository = "https://github.com/MegaRockLabs/cw-extra"

exclude = [
  "contract.wasm",
  "hash.txt",
]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
library = []

[dependencies]
cosmwasm-schema = { workspace = true }
cosmwasm-std    = { workspace = true }
cw-storage-plus = { workspace = true }
cw-utils        = { workspace = true }
cw2             = { workspace = true }
cw22            = { workspace = true }
cw81            = { workspace = true }