[package]
name = "cw82-key-account"
version = { workspace = true }
authors = [ "Kromsten <s@noreply.megarock.labs>" ]
edition = "2021"
description = "Example contract showcasing cw81 that uses the last signature in the storage for verification"
repository = "https://github.com/MegaRockLabs/cw-extra"

exclude = [
  "contract.wasm",
  "hash.txt",
]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
library = []

[dependencies]
types           = { workspace = true }
cosmwasm-std    = { workspace = true }
cosmwasm-schema = { workspace = true }
cw-storage-plus = { workspace = true }
cw-utils        = { workspace = true }
sha2            = { workspace = true }
cw2             = { workspace = true }
cw22            = { workspace = true, features = ["cosmwasm_v1"] }
cw82            = { workspace = true, features = ["multi", "cosmwasm_v1"] }

[dev-dependencies]
k256            = { workspace = true }


