[package]
name = "cw83-tba-factory"
version = { workspace = true }
authors = [ "Kromsten <s@noreply.megarock.labs>" ]
edition = "2021"
description = "Example contract showcasing cw81 that uses the last signature in the storage for verification"
repository = "https://github.com/MegaRockLabs/cw-plus-plus"

[dependencies]
thiserror       = { workspace = true }
semver          = { workspace = true }
cosmwasm-schema = { workspace = true }
cosmwasm-std    = { workspace = true }
cw-storage-plus = { workspace = true }
cw-utils        = { workspace = true }
cw2             = { workspace = true }
cw82            = { workspace = true }
cw83            = { workspace = true }
cw22            = { workspace = true }
cw721           = { workspace = true }