[package]
name = "cw83-tba-registry"
version = { workspace = true }
authors = [ "Kromsten <s@noreply.megarock.labs>" ]
edition = "2021"
description = "Example contract showcasing cw83 that uses the last signature in the storage for verification"
repository = "https://github.com/MegaRockLabs/cw-extra"


exclude = [
  "contract.wasm",
  "hash.txt",
]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
library = []

[dependencies]
thiserror           = { workspace = true }
semver              = { workspace = true }
cosmwasm-schema     = { workspace = true }
cosmwasm-std        = { workspace = true }
cw-storage-plus     = { workspace = true }
cw-utils            = { workspace = true }
cw2                 = { workspace = true }
cw82                = { workspace = true }
cw83                = { workspace = true }
cw22                = { workspace = true }
cw721               = { workspace = true }
sg721-base          = { workspace = true, features = ["library"] }
cw82-token-account  = { workspace = true, features = ["library"] }